prover-ray/zkcdriver/testdata/synced/invalid/basic_05.zkc
//error:3:3-4:unknown variable
fn f(x:u8) -> (r:u8) {
  z = 0
  return
}
